@@ -1,8 +1,10 @@
-CHANGES.txt - 06/28/2004
+CHANGES.txt - 06/29/2004
 ------------------------
 
 CHANGES IN CUPS V1.1.21rc2
 
+	- Updated the printer name error message to indicate
+	  that spaces are not allowed (STR #675)
 	- The scheduler didn't handle HTTP GET form data
 	  properly (STR #744)
 	- The pstops filter now makes sure that the prolog code
